working on heroes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    this is a test
+    this is a new shit. Really?
+
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
